<resources>

    <string name="app_name">PowerSlope</string>

    <string name="title_activity_user_profiles_management">Select user profile</string>

    <string name="action_settings">Settings</string>
    <string name="action_userProfile">User profile</string>

    <string name="gpsRawData">GPS Raw Data</string>
    <string name="time">Time</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="accuracy">Accuracy</string>
    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="listen">Start Listening</string>
    <string name="notRequested">(not requested)</string>
    <string name="notAvailable">(not available)</string>
    <string name="computedData">Computed Data</string>
    <string name="intervalPoint1">Interval from P1</string>
    <string name="distancePoint1">Distance from P1</string>
    <string name="altitudeDifferencePoint1">Altitude diff. from P1</string>
    <string name="slopePoint1">Slope from P1</string>
    <string name="speedPoint1">Speed from P1</string>
    <string name="powerPoint1">Power from P1</string>
    <string name="error">Error</string>

    <string name="availableUserProfiles">Available user profiles</string>
    <string name="bikeMass">Bike mass</string>
    <string name="symbol_bikeMass">Mbike</string>
    <string name="initialRiderMass">Initial rider mass</string>
    <string name="symbol_initialRiderMass">MriderInitial</string>
    <string name="rollingCoefficient">Rolling coefficient</string>
    <string name="symbol_rollingCoefficient">Cr</string>
    <string name="airDensity">Air density</string>
    <string name="symbol_airDensity">Rho</string>
    <string name="dragArea">Drag area</string>
    <string name="symbol_dragArea">Ad</string>
    <string name="saveProfile">Save profile</string>
    <string name="resetProfile">Reset profile</string>

    <string name="units_degrees">deg</string>
    <string name="units_seconds">s</string>
    <string name="units_meters">m</string>
    <string name="units_metersPerSecond">m/s</string>
    <string name="units_kilometersPerHour">km/h</string>
    <string name="units_percent">%</string>
    <string name="units_watts">W</string>

    <string name="dateFormat_realTime">HH:mm:ss</string>
    <string name="statusBarDefault">(Status bar)</string>

    <string name="filename_userProfiles">PowerSlope_Users.json</string>
    <string name="json_UserProfiles">UserProfiles</string>
    <string name="json_LastUserName">LastUserName</string>

</resources>
