<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/gpsRawData"
            android:layout_marginBottom="10dp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:id="@+id/lay_table">

            <TableRow>
                <TextView android:text="@string/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="@dimen/data_column_width"
                    android:id="@+id/l_time" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:width="@dimen/data_column_width"
                    android:id="@+id/tw_time"
                    android:gravity="end" />
    <!--            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="" />-->
            </TableRow>
            <TableRow>
                <TextView android:text="@string/latitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/l_latitude" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:id="@+id/tw_latitude"
                    android:gravity="end" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/units_degrees" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/longitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/l_longitude" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:id="@+id/tw_longitude"
                    android:gravity="end" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/units_degrees" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/accuracy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/l_accuracy" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:id="@+id/tw_accuracy"
                    android:gravity="end" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/units_meters" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/altitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/l_altitude" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:id="@+id/tw_altitude"
                    android:gravity="end" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/units_meters" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/l_speed" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:id="@+id/tw_speed"
                    android:gravity="end" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/units_kilometersPerHour" />
            </TableRow>
        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/computedData"
            android:layout_marginBottom="10dp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <TableRow>
                <TextView android:text="@string/intervalPoint1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="@dimen/data_column_width" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:width="@dimen/data_column_width"
                    android:id="@+id/tw_intervalPoint1"
                    android:gravity="end" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/units_seconds" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/distancePoint1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:id="@+id/tw_distancePoint1"
                    android:gravity="end" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/units_meters" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:id="@+id/tw_distancePoint1_error"
                    android:gravity="end" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/units_meters" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/altitudeDifferencePoint1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:id="@+id/tw_altitudeDifferencePoint1"
                    android:gravity="end" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/units_meters" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:id="@+id/tw_altitudeDifferencePoint1_error"
                    android:gravity="end" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/units_meters" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/slopePoint1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:id="@+id/tw_slopePoint1"
                    android:gravity="end" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/units_percent" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:id="@+id/tw_slopePoint1_error"
                    android:gravity="end" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/units_percent" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/speedPoint1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:id="@+id/tw_speedPoint1"
                    android:gravity="end" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/units_kilometersPerHour" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:id="@+id/tw_speedPoint1_error"
                    android:gravity="end" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/units_kilometersPerHour" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/powerPoint1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:id="@+id/tw_powerPoint1"
                    android:gravity="end" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/units_watts" />
            </TableRow>
            <TableRow>
                <TextView android:text="@string/error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notRequested"
                    android:id="@+id/tw_powerPoint1_error"
                    android:gravity="end" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:text="@string/units_watts" />
            </TableRow>
        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listen"
            android:id="@+id/but_startListening" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statusBarDefault"
            android:id="@+id/tw_statusBar" />

    </LinearLayout>

</ScrollView>
